[gd_scene load_steps=31 format=2]

[ext_resource path="res://BattleShipMovement.cs" type="Script" id=1]
[ext_resource path="res://Sprites/Boat_72.png" type="Texture" id=2]
[ext_resource path="res://PlayerHealth.gd" type="Script" id=3]
[ext_resource path="res://SpawnerController.cs" type="Script" id=4]
[ext_resource path="res://Spawner.cs" type="Script" id=5]
[ext_resource path="res://World.gd" type="Script" id=6]
[ext_resource path="res://BattleShipShoot.gd" type="Script" id=7]
[ext_resource path="res://Assets/Background_Day.png" type="Texture" id=8]
[ext_resource path="res://Assets/Background_Night.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sand2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Cloud_Day.png" type="Texture" id=11]
[ext_resource path="res://Water_Body.tscn" type="PackedScene" id=12]
[ext_resource path="res://Water_Body.gd" type="Script" id=13]
[ext_resource path="res://Assets/SandDay.png" type="Texture" id=14]
[ext_resource path="res://mixkit-jump-into-the-water-1180.wav" type="AudioStream" id=15]
[ext_resource path="res://Sprites/Health_Light-01.png" type="Texture" id=16]
[ext_resource path="res://HealthLight.gd" type="Script" id=17]
[ext_resource path="res://RestartButton.gd" type="Script" id=18]
[ext_resource path="res://Sprites/Button.png" type="Texture" id=19]
[ext_resource path="res://Fonts/Ronysiswadi15Bold-6YAwY.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://Sprites/Nix.png" type="Texture" id=21]
[ext_resource path="res://PointsLabel.gd" type="Script" id=22]
[ext_resource path="res://BestLabel.gd" type="Script" id=23]
[ext_resource path="res://Audio.tscn" type="PackedScene" id=24]
[ext_resource path="res://ship_boom.wav" type="AudioStream" id=25]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 117, 19.9063 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 3, 21.5 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 4, 17.5 )

[sub_resource type="DynamicFont" id=21]
size = 18
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=22]
size = 23
extra_spacing_char = 32
font_data = ExtResource( 20 )

[node name="Stage" type="Node2D"]
script = ExtResource( 6 )

[node name="BackgroundNight" type="Sprite" parent="."]
position = Vector2( 0, -110 )
scale = Vector2( 0.16, 0.15 )
z_index = -3
texture = ExtResource( 9 )

[node name="SandNight" type="Sprite" parent="BackgroundNight"]
position = Vector2( -6.25, -165 )
scale = Vector2( 4.1875, 4.46667 )
texture = ExtResource( 10 )

[node name="BackgroundDay" type="Sprite" parent="."]
position = Vector2( 0, -110 )
scale = Vector2( 0.16, 0.15 )
z_index = -3
texture = ExtResource( 8 )

[node name="SandDay" type="Sprite" parent="BackgroundDay"]
position = Vector2( 0, -165 )
scale = Vector2( 4.1875, 4.46667 )
texture = ExtResource( 14 )

[node name="BattleShip" type="KinematicBody2D" parent="."]
position = Vector2( 0, 16 )
script = ExtResource( 1 )

[node name="Battlecrip" type="Sprite" parent="BattleShip"]
position = Vector2( 0.500002, 0 )
scale = Vector2( 0.834615, 1 )
texture = ExtResource( 2 )
script = ExtResource( 7 )

[node name="Muzzle" type="Position2D" parent="BattleShip/Battlecrip"]
position = Vector2( 0, -50 )
scale = Vector2( 5, 5 )

[node name="FireDelayTimer" type="Timer" parent="BattleShip/Battlecrip"]
one_shot = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BattleShip"]
position = Vector2( 0, -7 )
polygon = PoolVector2Array( -108, 12, -104, 21, 89, 21, 109, 3, 77, 5, 76, 1, 70, -1, 70, 5, 41, 6, 39, -2, 34, -9, 25, -10, 22, -10, 21, -9, 16, -1, 13, -1, 13, -10, -18, -9, -43, 1, -43, 5, -67, 6, -82, 10 )

[node name="BattleShipArea" type="Area2D" parent="BattleShip"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BattleShip/BattleShipArea"]
position = Vector2( 0, -4.09373 )
shape = SubResource( 18 )

[node name="Ship Explosion" type="AudioStreamPlayer2D" parent="BattleShip/BattleShipArea"]
stream = ExtResource( 25 )
volume_db = 9.0

[node name="Boat Audio" type="AudioStreamPlayer2D" parent="BattleShip"]
position = Vector2( 0, -16 )
stream = ExtResource( 15 )
pitch_scale = 1.35

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -100 )
current = true

[node name="SpawnerController" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="SpawnLoc1" type="Node2D" parent="SpawnerController"]
position = Vector2( -500, -150 )
script = ExtResource( 5 )

[node name="SpawnLoc2" type="Node2D" parent="SpawnerController"]
position = Vector2( -500, -250 )
script = ExtResource( 5 )

[node name="SpawnLoc3" type="Node2D" parent="SpawnerController"]
position = Vector2( -500, -350 )
script = ExtResource( 5 )

[node name="SpawnLoc4" type="Node2D" parent="SpawnerController"]
position = Vector2( 500, -150 )
script = ExtResource( 5 )

[node name="SpawnLoc5" type="Node2D" parent="SpawnerController"]
position = Vector2( 500, -250 )
script = ExtResource( 5 )

[node name="SpawnLoc6" type="Node2D" parent="SpawnerController"]
position = Vector2( 500, -350 )
script = ExtResource( 5 )

[node name="SpawnLoc7" type="Node2D" parent="SpawnerController"]
position = Vector2( -640, -400 )
script = ExtResource( 5 )

[node name="SpawnLoc8" type="Node2D" parent="SpawnerController"]
position = Vector2( -640, -300 )
script = ExtResource( 5 )

[node name="SpawnLoc9" type="Node2D" parent="SpawnerController"]
position = Vector2( -640, -200 )
script = ExtResource( 5 )

[node name="SpawnLoc10" type="Node2D" parent="SpawnerController"]
position = Vector2( 640, -400 )
script = ExtResource( 5 )

[node name="SpawnLoc11" type="Node2D" parent="SpawnerController"]
position = Vector2( 640, -300 )
script = ExtResource( 5 )

[node name="SpawnLoc12" type="Node2D" parent="SpawnerController"]
position = Vector2( 640, -200 )
script = ExtResource( 5 )

[node name="Water_Body" parent="." instance=ExtResource( 12 )]
position = Vector2( -653, 30 )
z_index = 1
script = ExtResource( 13 )
spring_number = 60

[node name="CloudDay" type="Sprite" parent="."]
visible = false
position = Vector2( 641, -160 )
scale = Vector2( 0.16, 0.13 )
z_index = -2
texture = ExtResource( 11 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 643, 22.5 )
shape = SubResource( 19 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -644, 17.5 )
shape = SubResource( 20 )

[node name="CloudSpawn1" type="Position2D" parent="."]
position = Vector2( -20, -350 )

[node name="CloudSpawn2" type="Position2D" parent="."]
position = Vector2( 1260, -350 )

[node name="CloudSpawnTimer" type="Timer" parent="."]

[node name="HealthLight" type="Sprite" parent="."]
position = Vector2( -205, 162 )
z_index = 3
texture = ExtResource( 16 )
script = ExtResource( 17 )

[node name="RestartButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = -10.0
margin_right = -5.0
margin_bottom = 10.0
text = "Restart"
script = ExtResource( 18 )

[node name="MenuButton" type="Button" parent="RestartButton"]
margin_left = 66.5
margin_right = 114.5
margin_bottom = 20.0
text = "Menu"

[node name="Sprite" type="Sprite" parent="RestartButton"]
position = Vector2( 61, -174 )
scale = Vector2( 1.46901, 1.46901 )
texture = ExtResource( 19 )

[node name="Label" type="Label" parent="RestartButton/Sprite"]
margin_left = -66.031
margin_top = -30.6329
margin_right = 150.969
margin_bottom = 8.36708
custom_fonts/font = SubResource( 21 )
text = "GAME OVER"

[node name="Label2" type="Label" parent="RestartButton/Sprite"]
margin_left = -84.4107
margin_top = 1.36147
margin_right = 132.589
margin_bottom = 40.3615
custom_fonts/font = SubResource( 21 )
text = "Best: 000000"
script = ExtResource( 23 )

[node name="PointsText" type="Node2D" parent="."]
position = Vector2( 19, 0 )
z_index = 3

[node name="Label" type="Label" parent="PointsText"]
margin_left = -137.0
margin_top = 159.0
margin_right = 143.0
margin_bottom = 193.0
rect_scale = Vector2( 1, 1.89367 )
custom_colors/font_color = Color( 0.937255, 0.647059, 0.0235294, 1 )
custom_fonts/font = SubResource( 22 )
text = "000000"
script = ExtResource( 22 )

[node name="Nix" type="Sprite" parent="PointsText"]
position = Vector2( -131, 179 )
z_index = -1
texture = ExtResource( 21 )

[node name="Nix2" type="Sprite" parent="PointsText"]
position = Vector2( -78, 179 )
z_index = -1
texture = ExtResource( 21 )

[node name="Nix3" type="Sprite" parent="PointsText"]
position = Vector2( -24, 179 )
z_index = -1
texture = ExtResource( 21 )

[node name="Nix4" type="Sprite" parent="PointsText"]
position = Vector2( 28, 179 )
z_index = -1
texture = ExtResource( 21 )

[node name="Nix5" type="Sprite" parent="PointsText"]
position = Vector2( 79, 179 )
z_index = -1
texture = ExtResource( 21 )

[node name="Nix6" type="Sprite" parent="PointsText"]
position = Vector2( 131, 179 )
z_index = -1
texture = ExtResource( 21 )

[node name="Audio" parent="." instance=ExtResource( 24 )]

[connection signal="spawn_missle" from="BattleShip/Battlecrip" to="." method="_on_Battlecrip_spawn_missle"]
[connection signal="area_entered" from="BattleShip/BattleShipArea" to="BattleShip/BattleShipArea" method="_on_BattleShipArea_area_entered"]
[connection signal="pressed" from="RestartButton" to="RestartButton" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="RestartButton/MenuButton" to="RestartButton" method="_on_MenuButton_pressed"]
